test/corpus/expressions.txt
==================
filter pipelines
==================

{{ foo.bar|lower:"x"|default:42 }}
{{ _("hi")|upper }}
{{ -1.5e2|default:foo.bar }}

---

(template
  (content)
  (interpolation
    (filter_expression
      (primary_expression
        (lookup
          (identifier)
          (identifier)))
      (filter_call
        (filter_name
          (identifier))
        (filter_argument
          (literal
            (string))))
      (filter_call
        (filter_name
          (identifier))
        (filter_argument
          (literal
            (number))))))
  (content)
  (interpolation
    (filter_expression
      (primary_expression
        (literal
          (i18n_string)))
      (filter_call
        (filter_name
          (identifier)))))
  (content)
  (interpolation
    (filter_expression
      (primary_expression
        (literal
          (number)))
      (filter_call
        (filter_name
          (identifier))
        (filter_argument
          (lookup
            (identifier)
            (identifier))))))
  (content))

==================
numeric lookup
==================

{{ arr.0 }}

---

(template
  (content)
  (interpolation
    (filter_expression
      (primary_expression
        (lookup
          (identifier)
          (identifier)))))
  (content))
